[tool.poetry]
authors = ["Robert Rozanski"]
name = "langchain-galaxia-retriever"
description = "langchain galaxia integration"
license = "MIT"
version = "0.1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-core = "^0.3.21"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-socket = "^0.7.0"
pytest-asyncio = "^0.24.0"
langchain-tests = "0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
